Spelling corrected, spacing issue fixed and just a general tidy up

--- a/scss/_account-settings.scss
+++ b/scss/_account-settings.scss
@@ -31,8 +31,15 @@
 		height: 31px;
 	}
 	.delete-account-text {
+		display: block;
+		text-align: center;
 		font-size: 14px;
+		line-height: 140%;
 		padding-top: 0.8rem;
+
+		a {
+			font-weight: 600;
+		}
 	}
 }
 input.account-settings-input {
@@ -142,6 +149,8 @@ input.account-settings-input {
 }
 .connect-form {
     margin: 20px 0 0 !important;
+    padding-left: 38px;
+    padding-right: 35px;
 
     h3 {
     	a {
@@ -209,7 +218,7 @@ input.account-settings-input {
 	color: #669933;
 	font-weight: 600;
 }
-.recconnect-teacher {
+.reconnect-teacher {
 	float: right;
 	color: #999;
 	font-weight: 600;
@@ -238,7 +247,7 @@ input.account-settings-input {
 	height: 22px;
 	background: url(/assets/ru.png) -308px -302px no-repeat;
 	margin-left: 15px;
-	margin-right: 10px;
+	margin-right: 12px;
 }
 .account-warning {
 	@extend .clearfix;
@@ -246,17 +255,45 @@ input.account-settings-input {
 	border-bottom: #e3e3e3 1px solid;
 	border-left: #e3e3e3 1px solid;
 	background-color: #fff;
-	padding: 15px;
+	padding: 10px 20px;
+	margin-bottom: 30px;
+
+	.icon-warning {
+		position: absolute;
+		top: 10px;
+		left: 20px;
+	}
 
 	p {
 		float: left;
+		padding-left: 45px;
 		margin: 0;
 	}
+
+	a {
+		font-weight: 600;
+		text-decoration: underline;
+	}
+}
+.account-reorder-top {
+	[class*="block-grid-"] > li {
+		padding-bottom: 0;
+	}
+	.ru-button-big {
+		margin-bottom: 0;
+	}
+}
+.account-reorder-bottom {
+	margin: 0 15px;
 }
 @media #{$small-only} { 
 	.account-settings-wrap {
 		background: #f6f6f6;
 		border-bottom: #ccc 1px solid;
+
+		.delete-account-text {
+			text-align: left;
+		}
 	}
 	.account-settings-wrap .panel {
 		margin: 0;
@@ -282,6 +319,7 @@ input.account-settings-input {
 			width: 100%;
 		}
 		input {
+			text-align: center;
 			margin-bottom: 10px;
 		}
 		p {
@@ -295,6 +333,7 @@ input.account-settings-input {
 	// reorder buttons and message
 	.account-reorder-wrap {
 		display: table;
+		width: 100%;
 	}
 	.account-reorder-top {
     	display: table-header-group; 
@@ -302,6 +341,23 @@ input.account-settings-input {
 	.account-reorder-bottom {
     	display: table-footer-group;
 	}
+	.account-warning{
+		margin-top: 15px;
+		margin-bottom: 0;
+		border-bottom: none;
+
+		.icon-warning {
+			left: 0;
+		}
+		p {
+			padding-left: 25px;
+
+			strong {
+				display: block;
+			}
+		}
+	}
+	
 }
 @media #{$small-up} {
 	#account-gender {
